# nerfshop

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  requirements.txt  setup.py
cmake/: libigl.cmake
configs/nerf/: base_nodir.json
include/neural-graphics-primitives/: bounding_box.cuh  common.h  common_device.cuh  common_gl.h  common_nerf.h  differentiable_object.h  envmap.cuh  json_binding.h  marching_cubes.h  nerf.h  nerf_network.h  nerf_network_full.h  nerf_network_nodir.h  render_buffer.h  student_trainer.h  testbed.h  torch_api.h
include/neural-graphics-primitives/editing/: affine_duplication.h  cage_deformation.h  distiller.h  edit_operator.h  twist.h
include/neural-graphics-primitives/editing/datastructures/: cage.h  mesh.h  tet_mesh.h
include/neural-graphics-primitives/editing/tools/: affine_bounding_box.cuh  correct_mm_operations.h  default_mm_operations.h  fast_quadric.h  growing_selection.h  mm_operations.h  mvc.h  progressive_hulls.h  region_growing.h  selection_utils.h  sh_utils.h  svd3.h  visualization_utils.h
pyngp/: __init__.py  modules.py  nerf_network.py  testbed.py
scripts/: llff2nerf.py  run.py  scenes.py  test_torch.py
src/: common_gl.cu  common_nerf.cu  main.cu  marching_cubes.cu  nerf_loader.cu  python_api.cu  render_buffer.cu  student_trainer.cu  testbed.cu  testbed_image.cu  testbed_nerf.cu  testbed_sdf.cu  testbed_volume.cu
src/editing/: affine_duplication.cu  cage_deformation.cu  twist.cu
src/editing/datastructures/: cage.cu  mesh.cu  tet_mesh.cu
src/editing/tools/: correct_mm_operations.cu  default_mm_operations.cu  fast_quadric.cu  growing_selection.cu  progressive_hulls.cu  region_growing.cu  selection_utils.cu  sh_utils.cu  visualization_utils.cu
